--- a/index.html
+++ b/index.html
@@ -2,17 +2,21 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0 user-scalable=0">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="robots" content="none">
-    <meta name="shortcut icon" href="#">
-    <link rel="stylesheet" href="../style/style.css">
-    <title>Web page</title>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0 user-scalable=0">
+<meta http-equiv="X-UA-Compatible" content="IE=edge">
+<meta name="robots" content="none">
+<meta name="shortcut icon" href="#">
+<link rel="stylesheet" href="../web-page-1/style/style.css">
+<title>Web page</title>
 </head>
 
 <body>
-  <p>Hello!</p>
+  
 
-  <script src="../js/script.js"></script>
+
+
+
+
+<script src="../web-page-1/js/script.js"></script>
 </body>
