created header, non adaptive

--- a/index.html
+++ b/index.html
@@ -2,21 +2,51 @@
 <html lang="en">
 
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0 user-scalable=0">
-<meta http-equiv="X-UA-Compatible" content="IE=edge">
-<meta name="robots" content="none">
-<meta name="shortcut icon" href="#">
-<link rel="stylesheet" href="../web-page-1/style/style.css">
-<title>Web page</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0 user-scalable=0">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="robots" content="none">
+    <meta name="shortcut icon" href="#">
+    <link rel="stylesheet" href="../web-page-1/style/style.css">
+    <title>Web page</title>
 </head>
 
 <body>
+    <div class="wrapper">
+        <header class="header">
+            <div class="header__container container">
+                <div class="header__logo">
+                    <a href="https://google.com">
+                        <img src="../web-page-1/img/logo.png" alt="logo">
+                    </a>
+                </div>
+                <nav class="header__menu menu">
+                    <ul class="menu__list">
+                        <li class="menu__item">
+                            <a class="menu__link" href="https://google.com">Bussiness areas</a>
+                        </li>
+                        <li class="menu__item">
+                            <a class="menu__link" href="https://google.com">Featured images</a>
+                        </li>
+                        <li class="menu__item">
+                            <a class="menu__link" href="https://google.com">Gear cage</a>
+                        </li>
+                        <li class="menu__item">
+                            <a class="menu__link" href="https://google.com">Contact</a>
+                        </li>
+                        <li class="menu__item menu__button">
+                            <a class="menu__link menu__button-link" href="https://google.com">Get template</a>
+                        </li>
+                    </ul>
+                </nav>
+            </div>
+        </header>
+    </div>
   
 
 
 
 
 
-<script src="../web-page-1/js/script.js"></script>
+    <script src="../web-page-1/js/script.js"></script>
 </body>
