created main-block, non adaptive

--- a/index.html
+++ b/index.html
@@ -34,13 +34,53 @@
                         <li class="menu__item">
                             <a class="menu__link" href="https://google.com">Contact</a>
                         </li>
-                        <li class="menu__item menu__button">
-                            <a class="menu__link menu__button-link" href="https://google.com">Get template</a>
+                        <li class="menu__item menu__item_button">
+                            <a class="menu__link menu__link_button" href="https://google.com">Get template</a>
                         </li>
                     </ul>
                 </nav>
             </div>
         </header>
+        <main class="page">
+            <section class="page__main-block main-block">
+                <div class="main-block__container">
+                    <div class="main-block__tittle">Photographer & Filmmaker</div>
+                    <h1 class="main-block__company-name">Aperture Studios</h1>
+                    <p class="main-block__company-info">
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros elementum tristique. Duis cursus, mi quis viverra ornare, eros dolor interdum nulla, ut commodo diam libero vitae erat. Aenean faucibus nibh et justo cursus id rutrum lorem imperdiet. Nunc ut sem vitae risus tristique posuere.
+                    </p>
+                </div>
+                <div class="main-block__photo-data photo-data">
+                    <div class="photo-data__exposure">
+                        <span class="photo-data__icon">
+                            <img src="../web-page-1/img/main-block/icons/exposure.png" alt="exposure">
+                        </span>
+                        <span class="photo-data__text">1/2000s</span>
+                    </div>
+                    <div class="photo-data__diaphram">
+                        <span class="photo-data__icon">
+                            <img src="../web-page-1/img/main-block/icons/diaphram.png" alt="diaphram">
+                        </span>
+                        <span class="photo-data__text">f/11</span>
+                    </div>
+                    <div class="photo-data__iso">
+                        <span class="photo-data__icon">
+                            <img src="../web-page-1/img/main-block/icons/iso.png" alt="iso">
+                        </span>
+                        <span class="photo-data__text">100</span>
+                    </div>
+                    <div class="photo-data__location">
+                        <span class="photo-data__icon">
+                            <img src="../web-page-1/img/main-block/icons/location.png" alt="location">
+                        </span>
+                        <span class="photo-data__text">Iceland</span>
+                    </div>
+                </div>
+                <div class="main-block__background">
+                    <img src="../web-page-1/img/main-block/background.jpg" alt="background">
+                </div>
+            </section>
+        </main>
     </div>
   
 
