header and main block - adaptive

--- a/index.html
+++ b/index.html
@@ -44,11 +44,13 @@
         <main class="page">
             <section class="page__main-block main-block">
                 <div class="main-block__container">
-                    <div class="main-block__tittle">Photographer & Filmmaker</div>
-                    <h1 class="main-block__company-name">Aperture Studios</h1>
-                    <p class="main-block__company-info">
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros elementum tristique. Duis cursus, mi quis viverra ornare, eros dolor interdum nulla, ut commodo diam libero vitae erat. Aenean faucibus nibh et justo cursus id rutrum lorem imperdiet. Nunc ut sem vitae risus tristique posuere.
-                    </p>
+                    <div class="main-block__text">
+                        <div class="main-block__tittle">Photographer & Filmmaker</div>
+                        <h1 class="main-block__company-name">Aperture Studios</h1>
+                        <p class="main-block__company-info">
+                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros elementum tristique. Duis cursus, mi quis viverra ornare, eros dolor interdum nulla, ut commodo diam libero vitae erat. Aenean faucibus nibh et justo cursus id rutrum lorem imperdiet. Nunc ut sem vitae risus tristique posuere.
+                        </p>
+                    </div>
                 </div>
                 <div class="main-block__photo-data photo-data">
                     <div class="photo-data__exposure">
@@ -75,9 +77,6 @@
                         </span>
                         <span class="photo-data__text">Iceland</span>
                     </div>
-                </div>
-                <div class="main-block__background">
-                    <img src="../web-page-1/img/main-block/background.jpg" alt="background">
                 </div>
             </section>
         </main>
