adaptive design updates

--- a/index.html
+++ b/index.html
@@ -78,6 +78,7 @@
                         <span class="photo-data__text">Iceland</span>
                     </div>
                 </div>
+                <img class="main-lock__background" src="../web-page-1/img/main-block/background.jpg" alt="background">
             </section>
         </main>
     </div>
