path files update

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="robots" content="none">
     <meta name="shortcut icon" href="#">
-    <link rel="stylesheet" href="../web-page-1/style/style.css">
+    <link rel="stylesheet" href="style/style.css">
     <title>Web page</title>
 </head>
 
@@ -17,7 +17,7 @@
             <div class="header__container container">
                 <div class="header__logo">
                     <a href="https://google.com">
-                        <img src="../web-page-1/img/logo.png" alt="logo">
+                        <img src="img/logo.png" alt="logo">
                     </a>
                 </div>
                 <nav class="header__menu menu">
@@ -55,30 +55,30 @@
                 <div class="main-block__photo-data photo-data">
                     <div class="photo-data__exposure">
                         <span class="photo-data__icon">
-                            <img src="../web-page-1/img/main-block/icons/exposure.png" alt="exposure">
+                            <img src="img/main-block/icons/exposure.png" alt="exposure">
                         </span>
                         <span class="photo-data__text">1/2000s</span>
                     </div>
                     <div class="photo-data__diaphram">
                         <span class="photo-data__icon">
-                            <img src="../web-page-1/img/main-block/icons/diaphram.png" alt="diaphram">
+                            <img src="img/main-block/icons/diaphram.png" alt="diaphram">
                         </span>
                         <span class="photo-data__text">f/11</span>
                     </div>
                     <div class="photo-data__iso">
                         <span class="photo-data__icon">
-                            <img src="../web-page-1/img/main-block/icons/iso.png" alt="iso">
+                            <img src="img/main-block/icons/iso.png" alt="iso">
                         </span>
                         <span class="photo-data__text">100</span>
                     </div>
                     <div class="photo-data__location">
                         <span class="photo-data__icon">
-                            <img src="../web-page-1/img/main-block/icons/location.png" alt="location">
+                            <img src="img/main-block/icons/location.png" alt="location">
                         </span>
                         <span class="photo-data__text">Iceland</span>
                     </div>
                 </div>
-                <img class="main-lock__background" src="../web-page-1/img/main-block/background.jpg" alt="background">
+                <img class="main-lock__background" src="img/main-block/background.jpg" alt="background">
             </section>
         </main>
     </div>
@@ -88,5 +88,5 @@
 
 
 
-    <script src="../web-page-1/js/script.js"></script>
+    <script src="js/script.js"></script>
 </body>
