add section 2 + start creating adaptive design

--- a/index.html
+++ b/index.html
@@ -80,6 +80,53 @@
                 </div>
                 <img class="main-lock__background" src="img/main-block/background.jpg" alt="background">
             </section>
+            <section class="page__whatwedo whatwedo">
+                <div class="container">
+                    <div class="whatwedo__body">
+                        <div class="whatwedo__text">
+                            <h2 class="whatwedo__tittle">What we do.</h2>
+                            <div class="whatwedo__subtittle">The areas that we are specialized in.</div>
+                        </div>
+                        <div class="whatwedo__content">
+                            <div class="whatwedo__content-item content-item">
+                                <img src="img/whatwedo/1.jpg" alt="1">
+                                <div class="content-item__tittle">Product Photography</div>
+                                <div class="content-item__text">Cras commodo consequat orci, in convallis risus egestas non. Nulla efficitur auctor hendrerit. Etiam ut orci varius, faucibus libero ac, cursus quam.</div>
+                                <span class="content-item__button">
+                                    <a href="https://google.com" class="content-item__link">Read more</a>
+                                </span>
+                            </div>
+
+                            <div class="whatwedo__content-item content-item">
+                                <img src="img/whatwedo/2.jpg" alt="2">
+                                <div class="content-item__tittle">Architecture Photography</div>
+                                <div class="content-item__text">Aenean porta neque eget consequat fringilla. Vestibulum ultrices, orci nec egestas pharetra, ligula est semper enim, nec auctor sapien leo nec purus. Fusce tincidunt aliquet sapien, sit amet rhoncus leo imperdiet nec.</div>
+                                <span class="content-item__button">
+                                    <a href="https://google.com" class="content-item__link">Read more</a>
+                                </span>
+                            </div>
+
+                            <div class="whatwedo__content-item content-item">
+                                <img src="img/whatwedo/3.jpg" alt="3">
+                                <div class="content-item__tittle">Drone Photography</div>
+                                <div class="content-item__text">Mauris euismod elit et nisi ultrices, ut faucibus orci tincidunt. Duis tristique sed lorem a vestibulum. Cras commodo consequat orci, in convallis risus egestas non. Nulla efficitur auctor hendrerit. Etiam ut orci varius, faucibus libero ac, cursus quam.</div>
+                                <span class="content-item__button">
+                                    <a href="https://google.com" class="content-item__link">Read more</a>
+                                </span>
+                            </div>
+
+                            <div class="whatwedo__content-item content-item">
+                                <img src="img/whatwedo/4.jpg" alt="4">
+                                <div class="content-item__tittle">Wildlife Photography</div>
+                                <div class="content-item__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam scelerisque aliquam odio et faucibus. Nulla rhoncus feugiat eros quis consectetur. Morbi neque ex, condimentum dapibus congue et, vulputate ut ligula. Vestibulum sit amet urna turpis.</div>
+                                <span class="content-item__button">
+                                    <a href="https://google.com" class="content-item__link">Read more</a>
+                                </span>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </section>
         </main>
     </div>
   
