add block 3 +adaptive

--- a/index.html
+++ b/index.html
@@ -48,32 +48,35 @@
                         <div class="main-block__tittle">Photographer & Filmmaker</div>
                         <h1 class="main-block__company-name">Aperture Studios</h1>
                         <p class="main-block__company-info">
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros elementum tristique. Duis cursus, mi quis viverra ornare, eros dolor interdum nulla, ut commodo diam libero vitae erat. Aenean faucibus nibh et justo cursus id rutrum lorem imperdiet. Nunc ut sem vitae risus tristique posuere.
+                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros
+                            elementum tristique. Duis cursus, mi quis viverra ornare, eros dolor interdum nulla, ut
+                            commodo diam libero vitae erat. Aenean faucibus nibh et justo cursus id rutrum lorem
+                            imperdiet. Nunc ut sem vitae risus tristique posuere.
                         </p>
                     </div>
                 </div>
                 <div class="main-block__photo-data photo-data">
                     <div class="photo-data__exposure">
                         <span class="photo-data__icon">
-                            <img src="img/main-block/icons/exposure.png" alt="exposure">
+                            <img src="img/icons/exposure.png" alt="exposure">
                         </span>
                         <span class="photo-data__text">1/2000s</span>
                     </div>
                     <div class="photo-data__diaphram">
                         <span class="photo-data__icon">
-                            <img src="img/main-block/icons/diaphram.png" alt="diaphram">
+                            <img src="img/icons/diaphram.png" alt="diaphram">
                         </span>
                         <span class="photo-data__text">f/11</span>
                     </div>
                     <div class="photo-data__iso">
                         <span class="photo-data__icon">
-                            <img src="img/main-block/icons/iso.png" alt="iso">
+                            <img src="img/icons/iso.png" alt="iso">
                         </span>
                         <span class="photo-data__text">100</span>
                     </div>
                     <div class="photo-data__location">
                         <span class="photo-data__icon">
-                            <img src="img/main-block/icons/location.png" alt="location">
+                            <img src="img/icons/location.png" alt="location">
                         </span>
                         <span class="photo-data__text">Iceland</span>
                     </div>
@@ -90,8 +93,10 @@
                         <div class="whatwedo__content">
                             <div class="whatwedo__content-item content-item">
                                 <img src="img/whatwedo/1.jpg" alt="1">
-                                <div class="content-item__tittle">Product Photography</div>
-                                <div class="content-item__text">Cras commodo consequat orci, in convallis risus egestas non. Nulla efficitur auctor hendrerit. Etiam ut orci varius, faucibus libero ac, cursus quam.</div>
+                                <h3 class="content-item__tittle">Product Photography</h3>
+                                <p class="content-item__text">Cras commodo consequat orci, in convallis risus egestas
+                                    non. Nulla efficitur auctor hendrerit. Etiam ut orci varius, faucibus libero ac,
+                                    cursus quam.</p>
                                 <span class="content-item__button">
                                     <a href="https://google.com" class="content-item__link">Read more</a>
                                 </span>
@@ -99,8 +104,10 @@
 
                             <div class="whatwedo__content-item content-item">
                                 <img src="img/whatwedo/2.jpg" alt="2">
-                                <div class="content-item__tittle">Architecture Photography</div>
-                                <div class="content-item__text">Aenean porta neque eget consequat fringilla. Vestibulum ultrices, orci nec egestas pharetra, ligula est semper enim, nec auctor sapien leo nec purus. Fusce tincidunt aliquet sapien, sit amet rhoncus leo imperdiet nec.</div>
+                                <h3 class="content-item__tittle">Architecture Photography</h3>
+                                <p class="content-item__text">Aenean porta neque eget consequat fringilla. Vestibulum
+                                    ultrices, orci nec egestas pharetra, ligula est semper enim, nec auctor sapien leo
+                                    nec purus. Fusce tincidunt aliquet sapien, sit amet rhoncus leo imperdiet nec.</p>
                                 <span class="content-item__button">
                                     <a href="https://google.com" class="content-item__link">Read more</a>
                                 </span>
@@ -108,8 +115,11 @@
 
                             <div class="whatwedo__content-item content-item">
                                 <img src="img/whatwedo/3.jpg" alt="3">
-                                <div class="content-item__tittle">Drone Photography</div>
-                                <div class="content-item__text">Mauris euismod elit et nisi ultrices, ut faucibus orci tincidunt. Duis tristique sed lorem a vestibulum. Cras commodo consequat orci, in convallis risus egestas non. Nulla efficitur auctor hendrerit. Etiam ut orci varius, faucibus libero ac, cursus quam.</div>
+                                <h3 class="content-item__tittle">Drone Photography</h3>
+                                <p class="content-item__text">Mauris euismod elit et nisi ultrices, ut faucibus orci
+                                    tincidunt. Duis tristique sed lorem a vestibulum. Cras commodo consequat orci, in
+                                    convallis risus egestas non. Nulla efficitur auctor hendrerit. Etiam ut orci varius,
+                                    faucibus libero ac, cursus quam.</p>
                                 <span class="content-item__button">
                                     <a href="https://google.com" class="content-item__link">Read more</a>
                                 </span>
@@ -117,8 +127,11 @@
 
                             <div class="whatwedo__content-item content-item">
                                 <img src="img/whatwedo/4.jpg" alt="4">
-                                <div class="content-item__tittle">Wildlife Photography</div>
-                                <div class="content-item__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam scelerisque aliquam odio et faucibus. Nulla rhoncus feugiat eros quis consectetur. Morbi neque ex, condimentum dapibus congue et, vulputate ut ligula. Vestibulum sit amet urna turpis.</div>
+                                <h3 class="content-item__tittle">Wildlife Photography</h3>
+                                <p class="content-item__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                                    Nullam scelerisque aliquam odio et faucibus. Nulla rhoncus feugiat eros quis
+                                    consectetur. Morbi neque ex, condimentum dapibus congue et, vulputate ut ligula.
+                                    Vestibulum sit amet urna turpis.</p>
                                 <span class="content-item__button">
                                     <a href="https://google.com" class="content-item__link">Read more</a>
                                 </span>
@@ -127,9 +140,45 @@
                     </div>
                 </div>
             </section>
+            <section class="page__sunset sunset">
+                <div class="sunset__text">
+                    <h3 class="sunset__tittle">Sunset at Mount Fuji</h3>
+                    <p class="sunset__subtittle">Duis tristique sed lorem a vestibulum. Cras commodo consequat orci, in
+                        convallis risus egestas non.</p>
+                </div>
+                <div class="sunset__photo-data photo-data">
+                    <div class="photo-data__exposure">
+                        <span class="photo-data__icon">
+                            <img src="img/icons/exposure.png" alt="exposure">
+                        </span>
+                        <span class="photo-data__text">1"</span>
+                    </div>
+                    <div class="photo-data__diaphram">
+                        <span class="photo-data__icon">
+                            <img src="img/icons/diaphram.png" alt="diaphram">
+                        </span>
+                        <span class="photo-data__text">f/16</span>
+                    </div>
+                    <div class="photo-data__iso">
+                        <span class="photo-data__icon">
+                            <img src="img/icons/iso.png" alt="iso">
+                        </span>
+                        <span class="photo-data__text">400</span>
+                    </div>
+                    <div class="photo-data__location">
+                        <span class="photo-data__icon">
+                            <img src="img/icons/location.png" alt="location">
+                        </span>
+                        <span class="photo-data__text">Japan</span>
+                    </div>
+                </div>
+                <div class="sunset__background">
+                    <img src="img/sunset/background.jpg" alt="sunset__background">
+                </div>
+            </section>
         </main>
     </div>
-  
+
 
 
 
