--- a/index.html
+++ b/index.html
@@ -176,6 +176,54 @@
                     <img src="img/sunset/background.jpg" alt="sunset__background">
                 </div>
             </section>
+            <section class="page__tools tools">
+                <div class="tools__body">
+                    <div class="tools__body-text">
+                        <div class="tools__tittle">The Gear cage</div>
+                        <h4 class="tools__headline">The tools that we use.</h4>
+                        <p class="tools__text">The say that "no place is boring if you've had a good night's sleep and
+                            have a pocket full of unexposed film". While we don't shoot (a lot) of film these days —
+                            these are the tools that we actually use everyday to capture the amazing things around us.
+                        </p>
+                        <span class="tools__button">
+                            <a href="https://google.com" class="tools__button-link">Check it out</a>
+                        </span>
+                    </div>
+                    <div class="tools__body-image">
+                        <div class="tools__background">
+                            <img src="img/tools/background.jpg" alt="tools__background">
+                        </div>
+                    </div>
+                    <div class="tools__photo-data photo-data">
+                        <div class="photo-data__exposure">
+                            <span class="photo-data__icon">
+                                <img src="img/icons/exposure.png" alt="exposure">
+                            </span>
+                            <span class="photo-data__text">0,8"</span>
+                        </div>
+                        <div class="photo-data__diaphram">
+                            <span class="photo-data__icon">
+                                <img src="img/icons/diaphram.png" alt="diaphram">
+                            </span>
+                            <span class="photo-data__text">f/5,6</span>
+                        </div>
+                        <div class="photo-data__iso">
+                            <span class="photo-data__icon">
+                                <img src="img/icons/iso.png" alt="iso">
+                            </span>
+                            <span class="photo-data__text">100</span>
+                        </div>
+                        <div class="photo-data__location">
+                            <span class="photo-data__icon">
+                                <img src="img/icons/location.png" alt="location">
+                            </span>
+                            <span class="photo-data__text">Sweden</span>
+                        </div>
+                    </div>
+                </div>
+            </section>
+
+
         </main>
     </div>
 
