added block-5 'leafs', lol, it took 3 min :p

--- a/index.html
+++ b/index.html
@@ -222,6 +222,41 @@
                     </div>
                 </div>
             </section>
+            <section class="page__leafs leafs">
+                <div class="leafs__text">
+                    <h3 class="leafs__tittle">Monstera Leafs</h3>
+                    <p class="leafs__subtittle">Vestibulum sit amet urna turpis. Mauris euismod elit et nisi ultrices, ut faucibus orci tincidunt.</p>
+                </div>
+                <div class="leafs__photo-data photo-data">
+                    <div class="photo-data__exposure">
+                        <span class="photo-data__icon">
+                            <img src="img/icons/exposure.png" alt="exposure">
+                        </span>
+                        <span class="photo-data__text">1"</span>
+                    </div>
+                    <div class="photo-data__diaphram">
+                        <span class="photo-data__icon">
+                            <img src="img/icons/diaphram.png" alt="diaphram">
+                        </span>
+                        <span class="photo-data__text">f/16</span>
+                    </div>
+                    <div class="photo-data__iso">
+                        <span class="photo-data__icon">
+                            <img src="img/icons/iso.png" alt="iso">
+                        </span>
+                        <span class="photo-data__text">400</span>
+                    </div>
+                    <div class="photo-data__location">
+                        <span class="photo-data__icon">
+                            <img src="img/icons/location.png" alt="location">
+                        </span>
+                        <span class="photo-data__text">Japan</span>
+                    </div>
+                </div>
+                <div class="leafs__background">
+                    <img src="img/leafs/background.jpg" alt="leafs__background">
+                </div>
+            </section>
 
 
         </main>
