--- a/index.html
+++ b/index.html
@@ -257,6 +257,21 @@
                     <img src="img/leafs/background.jpg" alt="leafs__background">
                 </div>
             </section>
+            <section class="page__clents clents">
+                <div class="clents__body">
+                    <div class="clents__text">
+                        <h2 class="clents__tittle">Past clients</h2>
+                        <div class="clents__subtittle">Trusted by your favourite companies</div>
+                    </div>
+                    <div class="clients__logos">
+                        <img class="clients__logos_1" src="img/clents/1.png" alt="client-1">
+                        <img class="clients__logos_2"src="img/clents/2.png" alt="client-2">
+                        <img class="clients__logos_3"src="img/clents/3.png" alt="client-3">
+                        <img class="clients__logos_4"src="img/clents/4.png" alt="client-4">
+                        <img class="clients__logos_5"src="img/clents/5.png" alt="client-5">
+                    </div>
+                </div>
+            </section>
 
 
         </main>
