--- a/index.html
+++ b/index.html
@@ -272,6 +272,9 @@
                     </div>
                 </div>
             </section>
+            <section class="page__star-fall star-fall">
+                
+            </section>
 
 
         </main>
