--- a/index.html
+++ b/index.html
@@ -273,8 +273,41 @@
                 </div>
             </section>
             <section class="page__star-fall star-fall">
-                
+                <div class="star-fall__text">
+                    <h3 class="star-fall__tittle">Star fall in the Himalayas</h3>
+                    <p class="star-fall__subtittle">Nulla rhoncus feugiat eros quis consectetur. Morbi neque ex, condimentum dapibus congue et, vulputate ut ligula.</p>
+                </div>
+                <div class="star-fall__photo-data photo-data">
+                    <div class="photo-data__exposure">
+                        <span class="photo-data__icon">
+                            <img src="img/icons/exposure.png" alt="exposure">
+                        </span>
+                        <span class="photo-data__text">6"</span>
+                    </div>
+                    <div class="photo-data__diaphram">
+                        <span class="photo-data__icon">
+                            <img src="img/icons/diaphram.png" alt="diaphram">
+                        </span>
+                        <span class="photo-data__text">f/11</span>
+                    </div>
+                    <div class="photo-data__iso">
+                        <span class="photo-data__icon">
+                            <img src="img/icons/iso.png" alt="iso">
+                        </span>
+                        <span class="photo-data__text">800</span>
+                    </div>
+                    <div class="photo-data__location">
+                        <span class="photo-data__icon">
+                            <img src="img/icons/location.png" alt="location">
+                        </span>
+                        <span class="photo-data__text">Nepal</span>
+                    </div>
+                </div>
+                <div class="star-fall__background">
+                    <img src="img/star-fall/background.jpg" alt="leafs__background">
+                </div>
             </section>
+
 
 
         </main>
