--- a/index.html
+++ b/index.html
@@ -307,6 +307,15 @@
                     <img src="img/star-fall/background.jpg" alt="leafs__background">
                 </div>
             </section>
+            <section class="page__need-help need-help">
+                <div class="need-help__body">
+                    <h2 class="need-help__tittle">Need help with photography or videography?</h2>
+                    <div class="need-help__subtittle">We're here for you!</div>
+                    <span class="need-help__button">
+                        <a class="need-help__button-link" href="https://google.com">Get in touch</a>
+                    </span>
+                </div>
+            </section>
 
 
 
