added footer, only html

--- a/index.html
+++ b/index.html
@@ -316,16 +316,73 @@
                     </span>
                 </div>
             </section>
-
-
-
         </main>
+        <footer class="footer">
+            <div class="footer__body">
+                <div class="footer__top">
+                    <div class="footer__top-item">
+                        <div class="footer__top-logo">
+                            <img src="img/footer/logo.png" alt="footer-logo">
+                            <p class="footer__top-info">Photographers & videographers capturing the world around us.</p>
+                        </div>
+                        <div class="footer__top-areas top-areas">
+                            <div class="top-areas__tittle">Business areas</div>
+                            <ul class="top-areas__list">
+                                <li>Product Photography</li>
+                                <li>Architecture Photography</li>
+                                <li>Drone Photography</li>
+                                <li>Wildlife Photography</li>
+                            </ul>
+                        </div>
+                        <div class="footer__top-pages top-pages">
+                            <div class="top-pages__tittle">Pages</div>
+                            <ul class="top-pages__list">
+                                <li>Gear cage</li>
+                                <li>Featured images</li>
+                                <li>Contact</li>
+                                <li>Style guide</li>
+                                <li>Instructions</li>
+                                <li>Changelog</li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="footer__subscribe subscribe">
+                    <div class="subscribe__text">
+                        <div class="subscribe__tittle"></div>
+                        <div class="subscribe__subtittle"></div>
+                    </div>
+                    <div class="subscribe__button">
+                        <form class="subscribe__form" action="#">
+                            <input type="email">
+                            <button type="submit"> OK</button>
+                        </form>
+                    </div>
+                </div>
+
+                <div class="footer__copyright copyright">
+                    <div class="copyright__text"></div>
+                    <div class="copyright__social social">
+                        <div class="social__twitter">
+                            <a href="https://google.com" target="_blank">
+                                <img src="#" alt="twitter-logo">
+                            </a>
+                        </div>
+                        <div class="social__instagram">
+                            <a href="https://google.com" target="_blank">
+                                <img src="#" alt="instagram-logo">
+                            </a>
+                        </div>
+                        <div class="social__facebook">
+                            <a href="https://google.com" target="_blank">
+                                <img src="#" alt="facebook-logo">
+                            </a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </footer>
     </div>
-
-
-
-
-
-
     <script src="js/script.js"></script>
 </body>
