--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0 user-scalable=0">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="robots" content="none">
-    <meta name="shortcut icon" href="#">
+    <link rel="shortcut icon" href="#">
     <link rel="stylesheet" href="style/style.css">
     <title>Web page</title>
 </head>
@@ -265,10 +265,10 @@
                     </div>
                     <div class="clients__logos">
                         <img class="clients__logos_1" src="img/clents/1.png" alt="client-1">
-                        <img class="clients__logos_2"src="img/clents/2.png" alt="client-2">
-                        <img class="clients__logos_3"src="img/clents/3.png" alt="client-3">
-                        <img class="clients__logos_4"src="img/clents/4.png" alt="client-4">
-                        <img class="clients__logos_5"src="img/clents/5.png" alt="client-5">
+                        <img class="clients__logos_2" src="img/clents/2.png" alt="client-2">
+                        <img class="clients__logos_3" src="img/clents/3.png" alt="client-3">
+                        <img class="clients__logos_4" src="img/clents/4.png" alt="client-4">
+                        <img class="clients__logos_5" src="img/clents/5.png" alt="client-5">
                     </div>
                 </div>
             </section>
